修改增加权重时处理空格的逻辑， 添加处理脚本